@@ -1,3 +1,15 @@
+2011-02-21  Pratik Solanki  <psolanki@apple.com>
+
+        Reviewed by Darin Adler.
+
+        Remove global initializer in CookieStorageCFNet.cpp
+        https://bugs.webkit.org/show_bug.cgi?id=54905
+
+        * platform/network/cf/CookieStorageCFNet.cpp:
+        (WebCore::currentCookieStorage):
+        (WebCore::setCurrentCookieStorage):
+        (WebCore::setCookieStoragePrivateBrowsingEnabled):
+
 2011-02-18  Jer Noble  <jer.noble@apple.com>
 
         Reviewed by Sam Weinig.
